add toplevel statusindicator